# onvif_srvd_cmake

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  build-deb.sh  build-gsoap.sh  config.cfg  version.sh
cmake/: FindMosquitto.cmake  clang-cxx-dev-tools.cmake
gsoap_src/: build-gsoap.sh
patches/: stdsoapError.patch  stdsoapLoopFix.patch
src/: .rtsp-streams.c.kate-swp  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  Configuration.cpp  Configuration.hpp  GSoapService.cpp  GSoapService.hpp  ServiceContext.cpp  ServiceContext.h  ServiceMedia.cpp  daemon.cpp  daemon.h  daemon.hpp  mosquitto_hander.h  mosquitto_handler.c  onvif_srvd.cpp  rtsp-streams.c  rtsp-streams.cpp  rtsp-streams.h  rtsp-streams.hpp
start_scripts/: S90onvif_srvd  onvif_srvd.service
